--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: essentials_model
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: none
+publish_to: none
+
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
@@ -10,45 +12,42 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.6.14
+  flutter_modular: ^5.0.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  supabase_flutter: ^0.3.3
+  # dependencies_module:   
+  #   git:
+  #     url: https://github.com/Store-preview-creator/dependencies_module.git
+  #     ref: develop
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  logger: ^1.1.0
+  
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
 
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+  uses-material-design: true
+  assets:
+    - assets/images/
 
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: TTNorms_Bold
+      fonts:
+        - asset: assets/fonts/TTNormsPro_Bold.ttf
+          
+    - family: TTNorms_Medium
+      fonts:
+        - asset: assets/fonts/TTNormsPro_Medium.ttf
+          
+    - family: TTNorms_Regular
+      fonts:
+        - asset: assets/fonts/TTNormsPro_Regular.ttf
+          
+    - family: TTNormsPro_Light
+      fonts:
+        - asset: assets/fonts/TTNormsPro_Light.ttf
